# fncache

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
benches/: cache_benchmarks.rs  core_benchmarks.rs  file_bench.rs  redis_bench.rs  rocksdb_bench.rs  simple_bench.rs
examples/: async.rs  backend_file.rs  backend_memory.rs  backend_redis.rs  backends_file.rs  backends_memory.rs  basic.rs  cache_invalidation.rs  error_handling.rs  getting_started.rs  key_derivation.rs
fncache-macros/: Cargo.toml  README.md
fncache-macros/src/: lib.rs
src/: error.rs  eviction_tests.rs  invalidation.rs  invalidation_tests.rs  key_derivation.rs  key_derivation_tests.rs  lib.rs  metrics.rs  metrics_tests.rs  optimization.rs  warming.rs
src/backends/: file.rs  memory.rs  mod.rs  redis.rs  rocksdb.rs  wasm.rs  wasm_tests.rs
src/eviction/: mod.rs
src/serialization/: mod.rs
src/utils/: mod.rs
tests/: basic_cache_safety_tests.rs  cache_tests.rs  eviction_tests.rs  integration_tests.rs  key_derivation_tests.rs  minimal_eviction_test.rs  minimal_memory_test.rs  thread_safe_eviction_test.rs
