[workspace]
members = [
    ".",
    "fncache-macros",
]

[package]
name = "fncache"
version = "0.1.0"
edition = "2021"
authors = ["Lokesh Kumar <lkumar94@gmail.com>"]
description = "A zero-boilerplate Rust library for function-level caching with pluggable backends"
repository = "https://github.com/kumarlokesh/fncache"
license = "MIT"
keywords = ["cache", "memoization", "performance", "macro"]
categories = ["caching", "asynchronous", "web-programming"]

[features]
default = ["memory", "serde", "bincode"]
memory = ["dashmap", "tokio"]
redis-backend = ["dep:redis", "serde_json"]
file-backend = ["dep:serde", "bincode", "tempfile"]
rocksdb-backend = ["dep:rocksdb", "bincode"]
bincode = ["dep:bincode"]
metrics = ["dep:metrics"]
serde = ["dep:serde"]
compile-time-keys = []
test-utils = []
wasm = ["wasm-bindgen", "web-sys", "js-sys", "memory"]

[dependencies]
# Core dependencies
async-trait = "0.1.72"
thiserror = "1.0.50"
serde = { version = "1.0.188", features = ["derive"], optional = true } # Optional but in default features
serde_json = { version = "1.0.107", optional = true }
fncache-macros = { path = "./fncache-macros", version = "0.1.0" }
futures = { version = "0.3.28" }

# Backend dependencies
dashmap = { version = "5.5.0", optional = true }
tokio = { version = "1.32.0", features = ["sync", "rt-multi-thread", "macros", "rt", "time"], optional = true }
redis = { version = "0.23.3", optional = true, features = ["tokio-comp"] }
bincode = { version = "1.3.3", optional = true }
tempfile = { version = "3.8.0", optional = true }
rocksdb = { version = "0.21.0", optional = true }

# Metrics
metrics = { version = "0.21.1", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["Storage", "Window", "console"], optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serial_test = "2.0.0"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
futures = "0.3.28"
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports", "async_futures"] }
rand = "0.8"


[lib]
proc-macro = false

[[example]]
name = "basic"
required-features = ["memory"]

[[example]]
name = "async"
required-features = ["memory"]
