[workspace]
members = [
    ".",
    "fncache-macros",
]

[package]
name = "fncache"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["Lokesh Kumar <lkumar94@gmail.com>"]
description = "A zero-boilerplate Rust library for function-level caching with pluggable backends"
repository = "https://github.com/kumarlokesh/fncache"
license = "MIT"
keywords = ["cache", "memoization", "performance", "macro"]
categories = ["caching", "asynchronous", "web-programming"]

[features]
default = ["memory", "serde", "bincode"]
memory = ["dashmap", "tokio"]
redis-backend = ["dep:redis", "serde_json"]
file-backend = ["dep:serde", "bincode", "tempfile"]
rocksdb-backend = ["dep:rocksdb", "bincode"]
bincode = ["dep:bincode"]
metrics = ["dep:metrics"]
serde = ["dep:serde"]
compile-time-keys = []
test-utils = []
wasm = ["wasm-bindgen", "web-sys", "js-sys", "memory"]

[dependencies]
# Core dependencies
async-trait = "0.1.72"
thiserror = "1.0.50"
serde = { version = "1.0.188", features = ["derive"], optional = true } # Optional but in default features
serde_json = { version = "1.0.107", optional = true }
fncache-macros = { path = "./fncache-macros", version = "0.1.1" }
futures = { version = "0.3.28" }

# Backend dependencies
dashmap = { version = "5.5.0", optional = true }
tokio = { version = "1.32.0", features = ["sync", "rt-multi-thread", "macros", "rt", "time"], optional = true }
redis = { version = "0.23.3", optional = true, features = ["tokio-comp", "connection-manager"] }
bincode = { version = "1.3.3", optional = true }
tempfile = { version = "3.8.0", optional = true }
rocksdb = { version = "0.21.0", optional = true }

# Metrics
metrics = { version = "0.21.1", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["Storage", "Window", "console"], optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serial_test = "2.0.0"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
futures = "0.3.28"
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports", "async_futures"] }
rand = "0.8"


[lib]
proc-macro = false

[profile.bench]
opt-level = 3
debug = true

[profile.dev]
opt-level = 0
debug = true

# Benchmark harness settings
[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "file_bench"
harness = false

[[bench]]
name = "redis_bench"
harness = false

[[bench]]
name = "rocksdb_bench"
harness = false

[[example]]
name = "getting_started"
required-features = ["memory"]

[[example]]
name = "sync_vs_async_functions"
required-features = ["memory"]

[[example]]
name = "backend_memory"
required-features = ["memory"]

[[example]]
name = "backend_file"
required-features = ["file-backend"]

[[example]]
name = "cache_invalidation"
required-features = ["memory"]

[[example]]
name = "error_handling"
required-features = ["memory"]

[[example]]
name = "key_derivation"
required-features = ["memory", "compile-time-keys"]

[[example]]
name = "backend_redis"
required-features = ["redis-backend"]
